<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="8dp"
    tools:context=".ui.fragment.RegisterFragment">

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/darkGrey"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        tools:layout_editor_absoluteX="84dp"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty"
        whatever:testErrorString="@string/error_email_address_not_valid"
        whatever:testType="email" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/darkGrey"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/etConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        tools:layout_editor_absoluteX="84dp"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/darkGrey"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/btnNewMemberShip"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:layout_editor_absoluteX="84dp"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty" />

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:hint="@string/name"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/darkGrey"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/etEmail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="0dp"
        whatever:emptyErrorString="@string/error_field_must_not_be_empty" />

    <Button
        android:id="@+id/btnNewMemberShip"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="#E3DFE3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnAlreadyHaveAkk"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
        tools:layout_editor_absoluteX="120dp" />

    <Button
        android:id="@+id/btnAlreadyHaveAkk"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:shadowColor="#E3DFE3"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/already_have_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNewMemberShip" />

</androidx.constraintlayout.widget.ConstraintLayout>